# 4or

./: .gitignore  Cargo.toml  index.html  readme.md
console/: Cargo.toml
console/src/: main.rs
four/: Cargo.toml
four/src/: environment.rs  interpreter.rs  lib.rs  parser.rs  resolver.rs  scanner.rs  token.rs
four/src/interpreter/: function.rs
four/src/interpreter/function/: native.rs
four/src/parser/: expression.rs  statement.rs
four/src/scanner/: token.rs
four/src/token/: token_type.rs
src/: environment.rs  interpreter.rs  lib.rs  main.rs  parser.rs  scanner.rs  token.rs  web.rs
src/interpreter/: function.rs  types.rs
src/interpreter/function/: native.rs
src/parser/: expression.rs  statement.rs
src/scanner/: token.rs
src/scanner/token/: token_type.rs
src/token/: token_type.rs
web/: Cargo.toml
web/src/: main.rs
